# geobot

./: .gitignore  .pre-commit-config.yaml  README.md  db.py  game.py  geobot.py  main.py  pyproject.toml  requirements.txt  test_bot.py  test_game.py  test_geobot.py
src/geobot/: __init__.py  bot.py  db.py  game.py
tests/: test_bot.py  test_db.py  test_game.py  test_geobot.py
