[project]
name = "geobot"
version = "0.1.0"
description = "GeoGuessr Discord bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "basedpyright>=1.29.5",
    "debugpy>=1.8.14",
    "discord-py>=2.5.2",
    "dotenv>=0.9.9",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "ruff>=0.12.2",
    "types-requests>=2.32.4.20250611",
    "typing>=3.10.0.0",
]
